# wax-spes

./: .gitignore  ARCHITECTURE.md  README.md  TAB_ARCHITECTURE.md  electron-main.cjs  preload.cjs  svelte.config.js  vite.config.js
backend/: Cargo.toml
backend/src/: commands.rs  db.rs  main.rs  state.rs
src/: app.html  global.d.ts
src/lib/components/: Toolbar.svelte
src/lib/services/: httpSessionService.ts  httpToolService.ts
src/lib/types/: index.ts
src/routes/: +page.svelte
